<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_24"
    android:paddingTop="@dimen/dp_24"
    android:paddingRight="@dimen/dp_12"
    android:paddingBottom="@dimen/dp_5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet_dialog_error_title"
        android:textColor="@color/setting_text"
        android:textSize="@dimen/textsize_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/internet_dialog_error_message"
        android:textColor="@color/setting_text"
        android:textSize="@dimen/textsize_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="@dimen/dp_22"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet_dialog_error_try_again"
            android:padding="@dimen/dp_12"
            android:textColor="@drawable/leave_text_color"
            android:textSize="@dimen/textsize_14" />
    </LinearLayout>
</LinearLayout>